--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #ddd;
 }
 
 .App-logo {
@@ -26,6 +27,13 @@
 
 .App-link {
   color: #61dafb;
+}
+#rroot{
+  background-color: #ddd;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @keyframes App-logo-spin {
